# self-induced-glasses

./: CHANGELOG.md  LICENSE  README.md  analysis.py  average.py  cabal.project  default.nix  flake.nix  plot_autocorr.gnu  plot_structure.gnu  run.sh  self-induced-glasses.cabal  static.nix  structure_factor.py
.github/workflows/: ci.yml
app/: Main.hs
app/ising2d/: Main.hs
app/random-ising-3d/: Main.hs
app/rkky-couplings/: Main.hs
app/sk/: Main.hs
cbits/: fft.c  fft.h  helpers.c  helpers.h  metropolis.c  metropolis.h  xoshiro256plusplus.c
nix/: sources.json
src/: SelfInducedGlasses.hs
src/SelfInducedGlasses/: Analysis.hs  Core.hs  Interaction.hs  Metropolis.hs  Random.hs  Sampling.hs
test/: Spec.hs
visualization/: flake.nix
visualization/kernels/haskell/: default.nix
visualization/kernels/python/: default.nix
