cabal-version:       2.4
name:                self-induced-glasses
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/twesterhout/self-induced-glasses
bug-reports:         https://github.com/twesterhout/self-induced-glasses/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2022 Tom Westerhout
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/twesterhout/self-induced-glasses.git

common common-options
  build-depends:       base >= 4.12 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       ScopedTypeVariables
                       DerivingStrategies

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     SelfInducedGlasses
                       SelfInducedGlasses.Core
                       SelfInducedGlasses.Metropolis
                       SelfInducedGlasses.Analysis
                       SelfInducedGlasses.Interaction
                       SelfInducedGlasses.Random
  c-sources:           cbits/helpers.c
                       cbits/xoshiro256plusplus.c
  cc-options:          -O3 -DNDEBUG
  include-dirs:        cbits
  -- extra-lib-dirs:      /usr/lib/x86_64-linux-gnu/openblas-openmp
  extra-libraries:     blas
                     , fftw3f
  build-depends:       vector
                     , text
                     , deepseq
                     , scheduler
                     , containers
                     , bytestring
                     , random >= 1.2
                     , primitive
                     , ghc-prim
                     , mtl
                     , MemoTrie
                     , hdf5-hs
                     , list-t
                     , unliftio
                     -- , co-log

executable self-induced-glasses
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       self-induced-glasses
                     , random
                     , primitive
                     , vector
                     , mtl
                     , text
                     , hdf5-hs
                     , list-t
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite self-induced-glasses-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       self-induced-glasses
                     , random
                     , vector
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
