cabal-version:       3.0
name:                self-induced-glasses
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/twesterhout/self-induced-glasses
bug-reports:         https://github.com/twesterhout/self-induced-glasses/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2022 Tom Westerhout
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/twesterhout/self-induced-glasses.git

flag no-avx2
  description: Do not use AVX2
  manual: True
  default: False

common common-options
  build-depends:       base >= 4.12 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       ScopedTypeVariables
                       DerivingStrategies

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     SelfInducedGlasses.Sampling
                       SelfInducedGlasses.Random
                       -- SelfInducedGlasses
                       -- SelfInducedGlasses.Core
                       -- SelfInducedGlasses.Metropolis
                       -- SelfInducedGlasses.Analysis
                       -- SelfInducedGlasses.Interaction
                       -- SelfInducedGlasses.Random
  c-sources:           cbits/metropolis.c
                       cbits/fft.c
                       cbits/xoshiro256plusplus.c
  --                      cbits/helpers.c
                       third_party/kissfft-131.1.0/kiss_fft.c
                       third_party/kissfft-131.1.0/kfc.c
                       -- third_party/kissfft-131.1.0/kiss_fftnd.c
                       -- third_party/kissfft-131.1.0/kiss_fftndr.c
                       -- third_party/kissfft-131.1.0/kiss_fftr.c
  cc-options:          -Wall -Wextra -pedantic -O3 -ffast-math -fPIC -DNDEBUG
  if !flag(no-avx2)
    cc-options:        -msse -msse2 -msse3 -mssse3 -msse4.1 -msse4.2 -mavx -mavx2 -mtune=znver1
                       -Dkiss_fft_scalar=float -DKISS_FFT_USE_ALLOCA=0
                       -- -DUSE_KAHAN=1 -DCHECK_CORRECTNESS=0 -DUSE_FFTW=0
  include-dirs:        cbits
                     , third_party/simde-amalgamated-0.7.2
                     , third_party/kissfft-131.1.0
  -- extra-lib-dirs:      /usr/lib/x86_64-linux-gnu/openblas-openmp
  -- extra-libraries:     m rt
                     -- blas
                     -- , fftw3f
  build-depends:       vector
                     , vector-stream
                     , text
                     , async
                     , deepseq
                     , binary
                     , vector-binary-instances >= 0.2
                     , containers
                     , bytestring
                     , random >= 1.2
                     , mwc-random
                     , primitive
                     , ghc-prim
                     , mtl
                     , strict
                     , pvar
                     -- , MemoTrie
                     -- , hdf5-hs
                     , foldl
                     , list-t
                     , unliftio-core
                     , unliftio
                     , ansi-wl-pprint
                     -- , co-log
--  haddock-options:   --haddock-html-location='https://hackage.haskell.org/package/$pkg-$version/docs' --haddock-hyperlink-source

executable ising2d
  import:              common-options
  buildable:           True
  hs-source-dirs:      app/ising2d
  main-is:             Main.hs
  build-depends:       self-induced-glasses
                     , optparse-applicative
                     , random
                     , vector
                     , binary
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable random-ising-3d
  import:              common-options
  hs-source-dirs:      app/random-ising-3d
  main-is:             Main.hs
  build-depends:       self-induced-glasses
                     , primitive
                     , vector
                     , vector-stream
                     , random
                     , mtl
                     , text
                     , list-t
                     , foldl
                     , optparse-applicative
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable rkky-couplings
  import:              common-options
  hs-source-dirs:      app/rkky-couplings
  main-is:             Main.hs
  build-depends:       self-induced-glasses
                     , optparse-applicative
                     , text
                     , vector
                     , bytestring
                     , strict
                     , unliftio
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable sherrington-kirkpatrick
  import:              common-options
  buildable:           False
  hs-source-dirs:      app/sk
  main-is:             Main.hs
  build-depends:       self-induced-glasses
                     , primitive
                     , vector
                     , vector-stream
                     , random
                     , mtl
                     , text
                     , list-t
                     , foldl
                     , optparse-applicative
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

-- executable self-induced-glasses
--   buildable:           False
--   import:              common-options
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       self-induced-glasses
--                      , random
--                      , primitive
--                      , vector
--                      , mtl
--                      , text
--                      , hdf5-hs
--                      , list-t
--                      , optparse-applicative
--                      , split
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
-- 
-- test-suite self-induced-glasses-test
--   import:              common-options
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       self-induced-glasses
--                      , hspec
--                      , vector
--                      , list-t
--                      , foldl
--                      , random
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
